# simples-editor

./: .gitignore  .gitmodules  CONTRIBUTING.md  PROGRESS.md  README.md  SPRINTS.md  docker-compose.yml  prd_simples_online.md  test_subprotocol.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: sync_progress.yml
backend/: .coveragerc  Dockerfile  pyproject.toml  requirements.txt  wsgi.py
backend/src/simples_backend/: __init__.py  app.py  auth.py  config.py  logging_config.py  metrics.py  rate_limiter.py
backend/src/simples_backend/routes/: __init__.py  auth.py  compile.py  health.py  limits.py  run_ws.py
backend/src/simples_backend/services/: compiler_service.py  execution_service.py  execution_strategy.py
backend/tests/: conftest.py  test_auth.py  test_compile.py  test_compiler_service.py  test_config.py  test_execution_service.py  test_execution_strategy.py  test_health.py  test_metrics.py  test_rate_limiter.py  test_run_ws.py  test_sandbox_audit.py  test_verify_route.py
docs/: INCIDENTS.md  audit-sandbox-escape-40.md
docs/superpowers/plans/: 2026-05-29-supabase-auth-integration.md  2026-06-04-issue-8-login-screen.md
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/e2e/: auth.setup.ts  helpers.ts  ide.spec.ts  login.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/test/: App.test.tsx
nginx/: nginx.conf
runner/: Dockerfile
scripts/: sync_progress.py
(+23 files in other folders)
