[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simples-backend"
version = "0.1.0"
description = "Minimal backend bootstrap for Supabase auth integration."
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
  "PyJWT>=2.8.0",
  "pytest>=8.0.0",
  "flask-sock>=0.3.0",
  "gevent>=23.0.0",
  "docker>=7.0.0",
  "prometheus-client>=0.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
